# mpu_6500_rs

./: Cargo.toml  README.md  package.xml
src/: imu.rs  main.rs
